overflow fix

--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ body {
     background-image: linear-gradient(rgb(0, 0, 0)10%, rgba(1, 1, 1, 0.454) 40%, rgba(0, 0, 0, 0.8) 100%), url('./pictures/background.jpg') ;
     background-size: cover;
     background-position: center center;
-    overflow-x: scroll;
+    overflow-x: hidden;
   }
   .area {
     color: white;
@@ -213,7 +213,7 @@ body {
   color: white;
   padding: 60px 180px 0px 150px ;
   position: relative; 
-  overflow:scroll;
+  overflow-x: hidden;
   min-height: 550px;
 }
 .text h1 {
@@ -287,7 +287,7 @@ body {
   color: white;
   padding: 60px 180px 0px 150px ;
   position: relative; 
-  overflow:scroll;
+  overflow-x: hidden;
   min-height: 550px;
 }
 .pc {
@@ -356,7 +356,7 @@ body {
   color: white;
   padding: 60px 180px 0px 150px ;
   position: relative; 
-  overflow:scroll;
+  overflow-x: hidden;
   min-height: 550px;
 }
 .kids {
@@ -393,7 +393,7 @@ body {
   color: white;
   padding: 60px 180px 80px 150px ;
   position: relative; 
-  overflow:scroll;
+  overflow-x: hidden;
   min-height: 550px;
 }
 .download-box {
@@ -471,7 +471,7 @@ font-size: 16px;
   flex-direction: column;
   align-items: center;
   color: white;
-  overflow: scroll;
+  overflow-x: hidden;
   width: 100%;
 }
 .faq-container h1 {
@@ -506,7 +506,7 @@ font-size: 16px;
 .faq-container .description {
   width: 77%;
   max-height: 0px;
-  overflow: scroll;
+  overflow-x: hidden;
   transition: max-height 0.3s ease;
   text-align: justify;
   background-color: #2d2d2d;
@@ -581,7 +581,7 @@ p.description {
   background-color: black;
   margin-top: 8px;
   padding: 0px 11%;
-  overflow-y: scroll;
+  overflow-x: hidden;
 }
 .questions {
   padding-top: 4%;
@@ -669,7 +669,7 @@ p.description {
   color: white;
   border: none;
   border-radius: 5px;
-  overflow-y: scroll;
+  overflow-x: hidden;
   min-height: 700px;
 }
 #signInModal h3{
